<resources>
    <string name="app_name">校园易购</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home_fragment">title_activity_home_fragment</string>
    <string name="title_activity_user_fragment">title_activity_user_fragment</string>
    <string name="title_activity_default">DefaultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="go_back">返回</string>
    <string name="title_activity_market_fragment">MarketFragment</string>
    <string name="title_activity_market_list_fragment">MarketListFragment</string>
    <string name="title_activity_market_pub">发布商品</string>
    <string name="hint_loading">努力加载中…</string>
    <string name="hint_locating">正在定位…</string>
    <string name="localSuccess">定位成功</string>
    <string name="localFail">定位失败</string>
    <string name="timeoutError">服务器开小差啦</string>
    <string name="noConnectionError">木有网络连接呀</string>
    <string name="dataError">糟~~数据异常</string>
    <string name="has_no_login">你还未登录哦</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">正在登录...</string>
    <string name="loginouting">正在退出...</string>
    <string name="loginout_success">成功退出</string>
    <string name="getUserInfo_fail">获取用户信息失败</string>
    <string name="account_fail">账号或密码错误</string>
    <string name="account_error">用户信息有误</string>
    <string name="other_goods">TA的商品</string>
    <string name="other_share">TA的分享</string>
    <string name="other_find">TA的发现</string>
    <string name="other_like">TA的收藏</string>
    <string name="title_marketListFragment_second">二手</string>
    <string name="title_marketListFragment_dbuy">代购</string>
    <string name="title_marketListFragment_rent">出租</string>
    <string name="title_marketListFragment_askbuy">求购</string>
    <string name="title_marketListFragment_other">其它</string>
    <string name="title_activity_show_picture_file">选择图片</string>
    <string name="title_activity_picture_file">照片</string>
    <string name="market_choose_pic">选择图片</string>
    <string name="choose_camera">拍照</string>
    <string name="choose_finish">完成</string>
    <string name="choose_album">本地图片</string>
    <string name="market_pub_category">商品类别 : </string>
    <string name="market_pub_title">标题</string>
    <string name="market_pub_name">商品名称</string>
    <string name="market_pub_price">商品价格</string>
    <string name="market_pub_contactphone">联系电话</string>
    <string name="market_pub_describe">商品简述</string>
    <string name="market_pub_btn">发送</string>
    <string name="market_pub_success">发布成功</string>
    <string name="market_pub_fail">发布失败</string>
    <string name="add_comment">点击输入你的评论</string>
    <string name="add_comment_success">评论成功</string>
    <string name="comment_is_null">评论不能为空哦</string>
    <string name="add_comment_fail">评论失败</string>
    <string name="tip_pubgoods_title">标题不能为空</string>
    <string name="tip_pubgoods_name">商品名称不能为空</string>
    <string name="tip_pubgoods_price">商品价格不能为空</string>
    <string name="tip_qiniutoken_error">糟~~上传出错</string>
    <string name="title_activity_image_file">ImageFileActivity</string>
    <string name="title_activity_show_file_photo">ShowFilePhotoActivity</string>
    <string name="tip_goodsdetail_contact_phone">木有电话</string>
    <string name="change_goods_status">修改商品状态</string>
    <string name="change_goods_success">修改成功</string>
    <string name="change_goods_fail">修改失败</string>
    <string name="register_guide1">1.手机号码</string>
    <string name="register_guide2">2.验证码</string>
    <string name="register_guide3">3.填写信息</string>
    <string name="input_username_tips">请输入您的手机号码</string>
    <string name="input_password_tips">请输入至少6位密码</string>
    <string name="re_input_username_hint">请输入您的昵称</string>
    <string name="re_input_username_tips">昵称不能为空哦</string>
    <string name="login">登陆</string>
    <string name="new_user_text">新用户?</string>
    <string name="goto_register_text">点此注册</string>
    <string name="register_success">注册成功</string>
    <string name="forget_password">忘记密码?</string>
    <string name="next">下一步</string>
    <string name="old_user_text_tips">已有账户</string>
    <string name="login_button_tips">立即登陆</string>
    <string name="next_tips_text">点击“下一步”按钮</string>
    <string name="you_agree">即代表你同意</string>
    <string name="rule">《校园易购使用条款与隐私政策》</string>
    <string name="register">注册</string>
    <string name="register_phone">手机验证</string>
    <string name="title_activity_goods_detail">商品详情</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regirster">RegirsterActivity</string>
    <string name="title_activity_choose_school">选择学校</string>
    <string name="choose_school_tip">请输入学校名称</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_user_detail">个人主页</string>
    <string name="title_activity_setting_fragment">设置</string>
    <string name="title_activity_user_reply">UserReplyActivity</string>
    <string name="title_activity_user_msg_fragment">消息</string>
    <string name="title_activity_account_setting">AccountSetting</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
    <string name="action_setpwd">保存</string>
    <string name="action_edit">编辑</string>
    <string name="title_activity_user_detail_edit">UserDetailEditActivity</string>
    <string name="title_activity_set_user_info">SetUserInfoActivity</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_share_list_fragment">ShareListFragment</string>
    <string name="title_activity_share_pub">分享商品</string>
    <string name="title_activity_share_pub_edit">分享</string>
    <string name="title_fragment_find_list">发现</string>
    <string name="userdetail_avatar_change">修改成功</string>
    <string name="userdetail_goods">我的商品</string>
    <string name="userdetail_share">我的分享</string>
    <string name="userdetail_find">我的发现</string>
    <string name="userdetail_like">我的收藏</string>
    <string name="userdetail_school_text">所在学校</string>
    <string name="share_pub_edit_link_btn">获取商品信息</string>
    <string name="share_pub_edit_title">商品名称</string>
    <string name="share_pub_edit_price">价格</string>
    <string name="share_pub_edit_show_pic">商品展示图</string>
    <string name="share_pub_edit_recommend_hint">给我个推荐理由...</string>
    <string name="share_pub_edit_publish">确认发布</string>
    <string name="share_pub_name_tip">商品名称不能为空</string>
    <string name="title_activity_photo_pick">图片选择</string>
    <string name="title_activity_mark">标签</string>
    <string name="search_brand_list_hint">搜索标签</string>
    <string name="search_brand_cancel_btn">取消</string>
    <string name="add_tag_text">添加一个标签:</string>
    <string name="mark_tool_pre">上一步</string>
    <string name="mark_tool_next">下一步</string>
    <string name="title_activity_mark_submit">发布</string>
    <string name="mark_submit_hint">你咋发现的呀？</string>
    <string name="mark_submit_tip">内容不能为空</string>
    <string name="title_activity_find_detail">详情</string>
    <string name="title_activity_share_detail">商品详情</string>
    <string name="share_gogo">去看看</string>
    <string name="share_pub_edit_link_hint">请粘贴商品网址...</string>
    <string name="share_pub_url_error">不好意思，我们下次会努力攻破它 : </string>
    <string name="share_pub_I_know">OK ! 我知道了</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="group_chat">群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="The_dissolution_of_chatting">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="search_edit_hint">输入商品名称</string>
</resources>