<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:minWidth="250dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/forwrad_dialog_title_bg"
        android:text="@string/market_choose_pic"
        android:textColor="@color/choose_title_text_color"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/choose_dialog_padding_left"
        android:textSize="18dp" />
    
    <Button
        android:id="@+id/choose_dialog_camera"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/choose_camera"
        android:textColor="@color/choose_title_text_color"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/choose_dialog_padding_left"
        android:background="@drawable/choose_camera_dialog_bg"
        android:textSize="18dp" />
    
    <Button
        android:id="@+id/choose_dialog_album"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/choose_album"
        android:textColor="@color/choose_title_text_color"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/choose_dialog_padding_left"
        android:background="@drawable/choose_album_dialog_bg"
        android:textSize="18dp" />


</LinearLayout>