<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ruankaoba.app.login.RegisterActivity"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/space_10">

        <TextView
            android:id="@+id/register_guide_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/register_guide1"/>

        <ImageView
            android:layout_width="@dimen/register_guide_img"
            android:layout_height="@dimen/register_guide_img"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:src="@drawable/user_home_arrow"/>

        <TextView
            android:id="@+id/register_guide_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/register_guide2"/>

        <ImageView
            android:layout_width="@dimen/register_guide_img"
            android:layout_height="@dimen/register_guide_img"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_marginRight="@dimen/space_15"
            android:src="@drawable/user_home_arrow"/>

        <TextView
            android:id="@+id/register_guide_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/register_guide3"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/registerContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
